# PiCa

./: .gitignore  README.md  pyproject.toml  requirements.txt
LLM-Adapters/: commonsense_evaluate.py  eval.sh  finetune.py  pica.sh
MetaMath/: eval.sh  eval_gsm8k.py  eval_math.py  pica.sh  train_math.py
pica/: __init__.py  config.py  modeling.py  pica_layer.py
