[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pica-llm"
version = "0.1.0"
description = "Official implementation of PiCa: Parameter-Efficient Fine-Tuning with Column Space Projection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "transformers",
    "peft",
    "tqdm",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pica*"]
